Moving to XSL1, Xalan, and FO due to better support for chunked HTML and PDF output capability.